流程图sideBar初步展示

--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1523948 */
-  src: url('iconfont.woff2?t=1624433291097') format('woff2'),
-       url('iconfont.woff?t=1624433291097') format('woff'),
-       url('iconfont.ttf?t=1624433291097') format('truetype');
+  src: url('iconfont.woff2?t=1625041112319') format('woff2'),
+       url('iconfont.woff?t=1625041112319') format('woff'),
+       url('iconfont.ttf?t=1625041112319') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,78 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-iconset0448:before {
+  content: "\e747";
+}
+
+.icon-shujuliutong:before {
+  content: "\e693";
+}
+
+.icon-shujuliu:before {
+  content: "\e881";
+}
+
+.icon-shujuliuzhuan:before {
+  content: "\e635";
+}
+
+.icon-32_sjjc_C_BI_shujuliurenwu_1:before {
+  content: "\e722";
+}
+
+.icon-xiaolvdashitubiao33312:before {
+  content: "\e6d7";
+}
+
+.icon-renwu:before {
+  content: "\e61e";
+}
+
+.icon-renwu1:before {
+  content: "\e614";
+}
+
+.icon-renwu2:before {
+  content: "\e615";
+}
+
+.icon-renwu3:before {
+  content: "\e698";
+}
+
+.icon-renwu4:before {
+  content: "\e705";
+}
+
+.icon-renwu5:before {
+  content: "\e616";
+}
+
+.icon-jiancopyx:before {
+  content: "\e60d";
+}
+
+.icon-jian:before {
+  content: "\e727";
+}
+
+.icon-jia:before {
+  content: "\e60f";
+}
+
+.icon-jia1:before {
+  content: "\e697";
+}
+
+.icon-jian1:before {
+  content: "\e610";
+}
+
+.icon-jian2:before {
+  content: "\e65e";
 }
 
 .icon-gouwuche:before {
