--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1523948 */
-  src: url('iconfont.woff2?t=1625041112319') format('woff2'),
-       url('iconfont.woff?t=1625041112319') format('woff'),
-       url('iconfont.ttf?t=1625041112319') format('truetype');
+  src: url('iconfont.woff2?t=1626168543130') format('woff2'),
+       url('iconfont.woff?t=1626168543130') format('woff'),
+       url('iconfont.ttf?t=1626168543130') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shangyou:before {
+  content: "\e645";
+}
+
+.icon-zhongyou:before {
+  content: "\e646";
+}
+
+.icon-yingyonglingyu:before {
+  content: "\e647";
+}
+
+.icon-xiayou:before {
+  content: "\e648";
 }
 
 .icon-iconset0448:before {
