--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1523948 */
-  src: url('iconfont.woff2?t=1626168543130') format('woff2'),
-       url('iconfont.woff?t=1626168543130') format('woff'),
-       url('iconfont.ttf?t=1626168543130') format('truetype');
+  src: url('iconfont.woff2?t=1627370579854') format('woff2'),
+       url('iconfont.woff?t=1627370579854') format('woff'),
+       url('iconfont.ttf?t=1627370579854') format('truetype'),
+       url('iconfont.svg?t=1627370579854#iconfont') format('svg');
 }
 
 .iconfont {
@@ -11,6 +12,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-spread-line:before {
+  content: "\e617";
+}
+
+.icon-spread-line1:before {
+  content: "\e619";
+}
+
+.icon-GroupCopy:before {
+  content: "\e618";
+}
+
+.icon-xiangshang:before {
+  content: "\e628";
 }
 
 .icon-shangyou:before {
