--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1523948 */
-  src: url('iconfont.woff2?t=1629190162121') format('woff2'),
-       url('iconfont.woff?t=1629190162121') format('woff'),
-       url('iconfont.ttf?t=1629190162121') format('truetype'),
-       url('iconfont.svg?t=1629190162121#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1629447375437') format('woff2'),
+       url('iconfont.woff?t=1629447375437') format('woff'),
+       url('iconfont.ttf?t=1629447375437') format('truetype'),
+       url('iconfont.svg?t=1629447375437#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-she:before {
+  content: "\e783";
+}
+
+.icon-she1:before {
+  content: "\e699";
+}
+
+.icon-xiaoyouxi:before {
+  content: "\e6b8";
 }
 
 .icon-yonghu:before {
